refactor: aplica padrao DRY nos DTOs e melhora camada de servico
- Move a logica de conversao (Entity para DTO) para metodos estaticos 'from' nos Records
- Remove codigo repetitivo de mapeamento dos Services
- Adiciona @Transactional nos Services para integridade dos dados
- Adiciona @Valid nos Controllers para garantir validacao de entrada