@@ -2,7 +2,6 @@ package com.GardenJava.app.service;
 
 import com.GardenJava.app.dto.vaga.VagaRequestDTO;
 import com.GardenJava.app.dto.vaga.VagaResponseDTO;
-
 import com.GardenJava.app.model.quarto.Quarto;
 import com.GardenJava.app.model.vaga.Vaga;
 import com.GardenJava.app.repository.QuartoRepository;
@@ -10,12 +9,13 @@ import com.GardenJava.app.repository.VagaRepository;
 import jakarta.persistence.EntityNotFoundException;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
+@Transactional
 public class VagaService {
 
     private final VagaRepository vagaRepository;
@@ -28,9 +28,8 @@ public class VagaService {
 
         long vagasExistentes = vagaRepository.countByQuartoId(quartoId);
         if (vagasExistentes >= quarto.getCapacidade()) {
-            throw new IllegalArgumentException("Não é possível adicionar a vaga. A capacidade máxima do quarto (" + quarto.getCapacidade() + ") foi atingida.");
+            throw new IllegalArgumentException("Capacidade máxima do quarto atingida (" + quarto.getCapacidade() + ").");
         }
-
 
         Vaga vaga = new Vaga();
         vaga.setNomeIdentificador(body.nomeIdentificador());
@@ -38,34 +37,29 @@ public class VagaService {
         vaga.setDescricaoPeculiaridadesEn(body.descricaoPeculiaridadesEn());
         vaga.setQuarto(quarto);
 
-
         if (body.status() != null) {
             vaga.setStatus(body.status());
         }
 
-        Vaga salva = vagaRepository.save(vaga);
-        return toResponseDTO(salva);
+        return VagaResponseDTO.from(vagaRepository.save(vaga));
     }
 
+    @Transactional(readOnly = true)
     public List<VagaResponseDTO> listarPorQuarto(Long quartoId) {
-
         if (!quartoRepository.existsById(quartoId)) {
             throw new EntityNotFoundException("Quarto não encontrado");
         }
         return vagaRepository.findByQuartoId(quartoId).stream()
-                .map(this::toResponseDTO)
-                .collect(Collectors.toList());
+                .map(VagaResponseDTO::from)
+                .toList();
     }
 
-
-
+    @Transactional(readOnly = true)
     public VagaResponseDTO buscar(Long id) {
         Vaga vaga = vagaRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Vaga não encontrada"));
-        return toResponseDTO(vaga);
+        return VagaResponseDTO.from(vaga);
     }
-
-
 
     public VagaResponseDTO editar(Long id, VagaRequestDTO body) {
         Vaga vaga = vagaRepository.findById(id)
@@ -78,28 +72,13 @@ public class VagaService {
         if (body.status() != null) {
             vaga.setStatus(body.status());
         }
-
-        return toResponseDTO(vagaRepository.save(vaga));
+        return VagaResponseDTO.from(vagaRepository.save(vaga));
     }
-
-
 
     public void deletar(Long id) {
         if (!vagaRepository.existsById(id)) {
             throw new EntityNotFoundException("Vaga não encontrada");
         }
         vagaRepository.deleteById(id);
-    }
-
-
-    private VagaResponseDTO toResponseDTO(Vaga vaga) {
-        return new VagaResponseDTO(
-                vaga.getId(),
-                vaga.getNomeIdentificador(),
-                vaga.getDescricaoPeculiaridadesPt(),
-                vaga.getDescricaoPeculiaridadesEn(),
-                vaga.getStatus(),
-                vaga.getQuarto().getId()
-        );
     }
 }
